# VIO_Stereo_BASALT

./: CMakeLists.txt  README.md  make.sh  run.sh
src/: CMakeLists.txt  vio.cpp  vio.h  vio_config.cpp  vio_config.h
src/backend/: CMakeLists.txt  backend.cpp  backend.h  backend_data_processor.cpp  backend_log.h  backend_log_recorder.cpp  backend_main.cpp  backend_operations.cpp  backend_selfcheck.cpp  backend_visualizor.cpp  gyro_bias_solver.h  initialize_backend.cpp  initializor.cpp  initializor_estimate_bias_gyro.cpp  initializor_estimate_velocity_and_gravity.cpp  polynomial.cpp  polynomial.h
src/backend/estimator/: estimator.cpp  graph_generate.cpp  inertial_edges.h  marginalizor.cpp  visual_edges.h  visual_inertial_edges.h  visual_inertial_vetices.h
src/backend/initializor/: initializor.cpp  initializor_estimate_bias_gyro.cpp  initializor_estimate_velocity_and_gravity.cpp
src/data_loader/: CMakeLists.txt  data_loader.cpp  data_loader.h  data_loader_log.h
src/data_manager/: CMakeLists.txt  data_manager.cpp  data_manager.h  data_manager_log.h
src/frontend/: CMakeLists.txt  data_loader .cpp  data_loader.h  visual_frontend.h
test/: test_dataloader.cpp  test_vio.cpp  test_vio_stereo_basalt_on_euroc.cpp  test_vio_stereo_orb_slam3_on_euroc.cpp
